# nixwrap

./: LICENSE  README.md  pyproject.toml
src/nixwrap/: __init__.py  _version.py
src/nixwrap/gui/: __init__.py  _animations.py  _app.py  _colors.py  _geometry.py  _images.py  _painter.py  _text.py  _themes.py  _window.py
src/nixwrap/input/: __init__.py  _bindings.py  _dualsense.py  _keyboard.py  _xinput.py
src/nixwrap/log/: __init__.py  _models.py  _parser.py
src/nixwrap/process/: __init__.py  _detector.py  _window.py
src/nixwrap/save_file/: __init__.py  _accessors.py  _binary_parser.py  _binary_serializer.py  _cli.py  _crypto.py  _file_io.py  _models.py
src/nixwrap/stats/: __init__.py  _client.py  _models.py  _parser.py
src/nixwrap/tracker/: __init__.py  _cache.py  _client.py  _models.py
src/nixwrap/utils/: __init__.py  _config.py  _constants.py  _platforms.py  _ranks.py
